make sidebar fixed to top of page as the nav disappears scrolling down, fix header height on mobile breakpoints, adjust sidebar + filters for various breakpoints and header heights, adjust max-height of sidebar for stuck/unstuck main nav, specify sticky-wrapper for sidebar to avoid breaking main layout when stuck

--- a/web/assets/scss/components/_filters.scss
+++ b/web/assets/scss/components/_filters.scss
@@ -4,9 +4,12 @@
 body.nav-stuck {
   .mobile-filter {
     &.stuck {
-      top: $header-height-md;
+      top: $header-height;
+      @include media-sm {
+        top: $header-height-sm;
+      }
       @include media-md {
-        top: $header-height-lg;
+        top: $header-height-md;
       }
     }
   }
