--- a/web/assets/scss/components/_header.scss
+++ b/web/assets/scss/components/_header.scss
@@ -21,7 +21,7 @@ body {
   z-index: 100;
   position: absolute;
   padding: $beat*3 $padding-sm $padding-sm $padding-sm;
-  height: $header-height-sm;
+  height: $header-height;
   background-color: $white;
 
   @include media-sm {
@@ -67,6 +67,7 @@ body {
   position: relative;
   display: block;
   width: 50%;
+  padding: $beat 0;
 
   @include media-sm {
     padding: $beat*2 0;
@@ -84,8 +85,6 @@ body {
       @include media-md {
         width: 211px;
         height: 46px;
-      }
-      @include media-lg {
       }
     }
   }
